--- a/src/styles/partials/layout.sass
+++ b/src/styles/partials/layout.sass
@@ -6,7 +6,7 @@
     
     // TABLET
     @media screen and (min-width: $tablet) and (max-width: $desktop - 1) and (min-height: $tablet)
-        grid-template-rows: minmax(80px, 8vh) 1fr
+        grid-template-rows: minmax(80px, 10vh) 1fr
         grid-template-columns: 1fr
 
     // DESKTOP
